2002-05-06  Roman Hodek  <roman@hodek.net>

	* Merged in latest Debian version (0.6.1-6), including:
	   - IPv6 support by using getaddrinfo()
	   - my connect dialog changes that add a new field for naming the
	     meta server to contact

	* Added new games in server/, contributed by <piman@sacredchao.net>:
	  canyon.game conquest.game  pond.game square.game star.game x.game
          And one extended by me to have ports:
	  conquest+ports.game 
	
2002-03-10  Steve Langasek <vorlon@dodds.net>

	* clean up the SGML handling so that it matches the behavior of 
	  the Debian tools (which everyone seems to be using).

2002-03-10  Andy Heroff <aheroff@ameritech.net>

	* Modified call to execv, as per SF bug 482743.

2002-03-10  Steve Langasek <vorlon@dodds.net>

	* Begin cleaning up the source to make it usable again.
	* Bump the protocol version, since, well, that's what you're 
	  supposed to do when you change the bloody protocol.

2001-05-29  David Fallon <davef@tetsubo.com>

	* Added Geoff Hanson's <gwhizz@usa.net> reconnect patch. The short version
		of how this works is when someone disconnects, instead of the usual
		cleanup, player_archive is called which saves the names of the
		disconnected individuals. On all connects, the player name is
		searched for to see if this is a player that has been archived,
		and if so, the player_revive function is called to bring them back.
		There's also a new gameinfo struct that is used to pass the game
		state back to the client. Note, if we ever have a gnocatan
		tournament, we'll have some security problems, but that's okay as
		there's no other security anyways. 
	* Changed client/build.c, client.c, client.h, develop.c, player.c, player.h
	* Changed server/develop.c, discard.c, player.c, pregame.c, robber.c,
		server.h, trade.c, turn.c

2001-03-09  Matt Waggoner  <matt@waggoner.com>

	* One of the official rule variants for Settlers of Catan is
	to disallow rolling a 7 on the first two rounds.  This has been