@@ -1,5 +1,8 @@
 2002-05-06  Roman Hodek  <roman@hodek.net>
 
+	* ai/greedy.c, ai/client.h: Fix "no prototype for foobar" warnings
+	by introducing some statics and a new prototype.
+
 	* Merged in latest Debian version (0.6.1-6), including:
 	   - IPv6 support by using getaddrinfo()
 	   - my connect dialog changes that add a new field for naming the
